Fixed alignment of posts card and small changes in EmailTemplate code!

--- a/src/components/UserProfileComponents/PostsList/postsList.module.css
+++ b/src/components/UserProfileComponents/PostsList/postsList.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: center;
     gap: 40px;
-    align-items: center;
 }
 .postsContainer{
     display: flex;
